# DE_ITMO_Course

./: .gitignore  README.md  README_first.md  README_first_task.md  README_main.md  environment.yml  pyproject.toml
docs/: MANUAL.md  NAMING.txt  README_API.md  README_Scrap.md
experiments/: write_to_db.py
experiments/API/: API_example.py  data_from_API.py
experiments/Download_dataset/: data_loader.py
experiments/Scrapping/: create_table.py  main_scrapping.py  typification_data.py
notebooks/: EDA.ipynb
src/: write_to_db.py
src/API/: API_example.py  README.md  data_saver_API.py  get_user_API.py
src/DE_ITMO_Course/: main.py
src/DS_ITMO_Course/: main.py
src/Data_Science_ITMO_2025/: data_conversion.py  data_loader.py  data_saver.py  main.py
src/SQL/: write_to_db.py
src/Scrapping/: README.md  typification_data.py
src/etl/: extract.py  load.py  main.py  transform.py  validate.py
tests/API_tests/: API_example_test.py  API_test_500_elements.py  data_saver_API_test.py  typization_test.py
tests/DE_ITMO_Course_tests/: data_loader_test.py
tests/DS_ITMO_Course_tests/: test_main.py
tests/Data_Science_ITMO_2025/: data_loader_test.py  data_preprocessor_test.py  data_saver_test.py  test.py  test_main.py
tests/ETL_tests/: extract.py  load.py  main.py  transform.py  validate.py
tests/Scrapping_tests/: main_scrapping_test.py  scrapping_main_test_ALL_in_ONE.py  typification_data_test.py
