[project]
name = "data-work-itmo"
version = "0.1.0"
description = ""
authors = [
    {name = "DoubleZero"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "wget (>=3.2,<4.0)",
    "ipykernel (>=6.30.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)"
]
